@@ -60,7 +60,7 @@ public:
   virtual int     AppendImage(KImage *inImage) {return 1;};
 	virtual int     WriteSection(KImage * inImage, int inSect) {return 1;};
   virtual	void    SetPixelSpacing(float pixel) {};
-  virtual int     AddTitle(char *inTitle);
+  virtual int     AddTitle(const char *inTitle);
   virtual int     CheckMontage(MontParam *inParam) {return 0;}; 
   virtual int     getPcoord(int inSect, int &outX, int &outY, int &outZ) {return -1;};
   virtual int     getStageCoord(int inSect, double &outX, double &outY) {return -1;};
